Bring phase 3 optimizer scheduling into compliance